# virtus-bot

./: .dockerignore  CONFIG_EXAMPLE.md  Dockerfile  LICENSE  README.md  README_MULTI_CHANNEL.md  README_NOI_TU.md  debug_football_search.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
apps/: cmc_currency.py  currency.py  experience.py  home_debt.py  noi_tu.py  score.py  server.py
bot/cogs/: football.py  home_debt.py  noi_tu.py  score.py
bot/core/: bot.py  tasks.py
core/: bot.py  events.py  tasks.py
database/: base.py  channel.py  channel_app.py  server.py
infra/: __init__.py
infra/db/: __init__.py  base.py  postgres.py
models/: __init__.py  channel.py  channel_app.py  cmc_debt.py  config.py  currency.py  debt_group.py  feature_toggle.py  football.py  guild.py  home_debt.py  noi_tu.py  score.py  server.py
repositories/: __init__.py  channel.py  channel_app.py  config.py  currency.py  debt.py  feature_toggle.py  football.py  guild.py  home_debt.py  noi_tu.py  score.py  server.py  user.py
services/: football_api.py
utils/: common.py
web/: server.py
web/static/: index.html  script.js  styles.css
